Finalizing lab notebook, fixing alerts & erros & pushing my reflections document to md

--- a/01-html/02-images.html
+++ b/01-html/02-images.html
@@ -9,10 +9,11 @@
   <body>
     <main>
       <!-- Add your code here -->
+      <h1>02 - images</h1>
       <figure>
         <img
           src="http://placekitten.com/g/200/150"
-          alt="image of a kitten"
+          alt="a small kitten"
           width="200"
           height="150"
         />
@@ -21,7 +22,7 @@
       <figure>
         <img
           src="https://placedog.net/200/150"
-          alt="image of a puppy"
+          alt="a small a puppy"
           width="200"
           height="150"
         />
