--- a/07-javascript/04-dom.html
+++ b/07-javascript/04-dom.html
@@ -9,19 +9,22 @@
   </head>
   <body>
     <main>
+      <h1>04-dom Exercise</h1>
       <section>
         <h2>Click Event</h2>
         <label for="userInput1">Input</label>
         <input id="userInput1" type="text" />
         <input type="button" value="Copy Text" id="copy" />
-        <label for="output">Output</label>
+        <div>Output</div>
+        <!-- <label for="output">Output</label> -->
         <div id="output" class="output"></div>
       </section>
       <section id="inputEventExample">
         <h2>Input Event</h2>
         <label for="userInput2">Input</label>
         <input id="userInput2" type="text" />
-        <label for="output">Output</label>
+        <div>Output</div>
+        <!-- <label for="output">Output</label> -->
       </section>
     </main>
   </body>
