--- a/03-css/06-media-queries.html
+++ b/03-css/06-media-queries.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Exercise 06 - Media Queries</title>
     <link rel="stylesheet" href="../_styles/styles.css" />
     <link rel="stylesheet" href="06-media-queries.css" />
