--- a/06-bootstrap/02-grid.html
+++ b/06-bootstrap/02-grid.html
@@ -7,12 +7,29 @@
     <title>Exercise 02 - Bootstrap Grid</title>
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+    />
     <link rel="stylesheet" href="../_styles/styles.css" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>02 - Bootstrap Grid</h1>
-    <!-- Add your code here -->
+    <main class="container mt-4">
+      <h1>02 - Bootstrap Grid</h1>
+      <div class="container">
+        <div class="row mt-4">
+          <div class="col-6">One</div>
+          <div class="col-6">Two</div>
+        </div>
+        <div class="row">
+          <div class="col-8">Three</div>
+          <div class="col-4">Four</div>
+        </div>
+        <div class="row">
+          <div class="col-4">Five</div>
+          <div class="col-4">Six</div>
+          <div class="col-4">Seven</div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
